[tool.poetry]
name = "test-ziphy"
version = "0.1.0"
description = ""
authors = ["Ivan Gorbunov <falseprogrammerfirst@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
